# clips-contract

./: AUDIT_CHECKLIST.md  Cargo.toml  DEPLOYMENT_VERIFICATION.md  Makefile  README.md  ROYALTY_DECIMAL_SCALING.md
clips_nft/: Cargo.toml
clips_nft/src/: lib.rs
clips_nft/test_snapshots/: test_error_cases.1.json  test_integration_wallet_simulation_mint_and_royalty.1.json  test_mint_after_metadata_upload.1.json  test_royalty_on_secondary_sale.1.json
clips_nft/test_snapshots/tests/: test_burn.1.json  test_burn_emits_event.1.json  test_clip_token_id_lookup.1.json  test_double_mint_prevention.1.json  test_double_mint_same_clip_id_panics.1.json  test_mint_and_burn_cycle.1.json  test_mint_emits_event.1.json  test_mint_fails_with_wrong_clip_id_in_payload.1.json  test_mint_fails_with_wrong_owner_in_payload.1.json  test_mint_fails_with_wrong_signature.1.json  test_mint_fails_without_signer_set.1.json  test_mint_soulbound_token.1.json  test_mint_stores_owner_and_uri.1.json  test_multiple_mints_increment_token_id.1.json  test_non_admin_cannot_pause.1.json  test_pause_blocks_mint.1.json  test_pause_blocks_transfer.1.json  test_regular_token_transferable.1.json  test_royalty_calculation_accuracy.1.json  test_royalty_calculation_max_u128_values.1.json  test_royalty_calculation_safe_math.1.json  test_royalty_info_custom_asset.1.json  test_royalty_info_xlm.1.json  test_royalty_overflow_detection.1.json  (+14 more)
clips_nft/tests/: backend_simulation.rs  integration.rs
contracts/: FRONTEND_INTEGRATION.md
contracts/clips_nft/: README.md  example-mint.js
scripts/: backend-mint.js
(+1 files in other folders)
