[workspace]
resolver = "2"
members = [
    "clips_nft",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ClipCash Team"]
repository = "https://github.com/clipcash/clips-contract"

[workspace.dependencies]
soroban-sdk = "=25.3.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-with-logs]
inherits = "release"
debug = true
